--- a/Freelance Website/index.html
+++ b/Freelance Website/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Freelance Services</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Freelance Hub</h1>
+        <nav>
+            <a href="#hero">Home</a>
+            <a href="#services">Services</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
+    <section id="hero" class="hero">
+        <h1>Welcome to Freelance Hub</h1>
+        <p>Your go-to platform for professional freelance services. Minimal, aesthetic, and efficient.</p>
+    </section>
+
+    <section id="services" class="section services">
+        <h2>Our Services</h2>
+        <div class="service-grid">
+            <div class="service-item">
+                <h3>Web Development</h3>
+                <p>Build stunning websites with HTML, CSS, and more.</p>
+            </div>
+            <div class="service-item">
+                <h3>Graphic Design</h3>
+                <p>Create beautiful visuals and branding.</p>
+            </div>
+            <div class="service-item">
+                <h3>Content Writing</h3>
+                <p>Craft engaging content for your needs.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="section about">
+        <h2>About Us</h2>
+        <p>We are a team of passionate freelancers dedicated to delivering high-quality work. Our minimal approach ensures focus on what matters most.</p>
+    </section>
+
+    <section id="contact" class="section contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Freelance Hub. All rights reserved.</p>
+    </footer>
+</body>
+</html>
