--- a/Freelance Website/program1_home_inline.html
+++ b/Freelance Website/program1_home_inline.html
@@ -20,9 +20,11 @@
         <p style="color: #F2F4F3; font-size: 18px;">
             Connect with top freelancers for your projects. Minimal, aesthetic, and efficient.
         </p>
-        <button style="background-color: #ff0066; color: white; padding: 12px 25px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px;">
-            View Services
-        </button>
+        <a href="program2_services_internal.html">
+    <button style="background-color: #ff0066; color: white; padding: 12px 25px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px;">
+        View Services
+    </button>
+</a>
     </section>
 
     <footer style="background-color: #49111C; padding: 15px; margin-top: 20px;">
