--- a/Freelance Website/program2_services_internal.html
+++ b/Freelance Website/program2_services_internal.html
@@ -93,10 +93,10 @@
     <header>
         <h1>Freelance Hub</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Services</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="program1_home_inline.html">Home</a>
+            <a href="program2_services_internal.html">Services</a>
+            <a href="program4_pricing.html">Pricing</a>
+            <a href="program3_contact.html">Contact</a>
         </nav>
     </header>
 
@@ -105,7 +105,11 @@
     <div class="service-card">
         <h3>Web Development</h3>
         <p>Build stunning websites with HTML, CSS, and JavaScript.</p>
+        <a href="program3_contact.html">
+        <a href="program3_contact.html">
         <button>Hire Now</button>
+    </a>
+</a>
     </div>
 
     <div class="service-card">
@@ -126,3 +130,4 @@
 
 </body>
 </html>
+
